--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-element-transition",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
@@ -12,7 +12,9 @@
       "require": "./dist/index.umd.js"
     }
   },
-  "files": ["/dist"],
+  "files": [
+    "/dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
