Add test for ReactTransition component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "./index.ts"],
+  "include": ["src", "./index.ts", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
